--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
     "ts-node-dev": "^2.0.0"
   }
 }
