--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "scripts": {
-    "dev": "ts-node-dev ./src/server.ts"
+    "dev": "ts-node-dev ./src/server.ts",
+    "lint": "eslint . --ext .ts"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "sequelize": "^6.20.1",
+    "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.38",
+    "@types/sequelize": "^4.28.13",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "chai": "^4.3.6",
+    "eslint": "^8.16.0",
     "mocha": "^10.0.0",
     "ts-node-dev": "^2.0.0"
   }
