--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
+  "name": "udagram-c2-restapi",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "tsc": "tsc",
+    "prod": "tsc && node ./www/server.js",
+    "clean": "rimraf www/ || true",
+    "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev ./src/server.ts",
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.1146.0",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.20.1",
     "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bluebird": "^3.5.36",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.38",
     "@types/sequelize": "^4.28.13",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -17,6 +37,7 @@
     "chai": "^4.3.6",
     "eslint": "^8.16.0",
     "mocha": "^10.0.0",
+    "rimraf": "^3.0.2",
     "ts-node-dev": "^2.0.0"
   }
 }
